deploy/dev/openframe-microservices/openframe-management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openframe-management
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - openframe-management.192.168.100.100.nip.io
    secretName: openframe-management-tls-secret
  rules:
    - host: openframe-management.192.168.100.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openframe-management
                port:
                  number: 8095
